--- a/src/locale/my.json
+++ b/src/locale/my.json
@@ -1,5 +1,12 @@
 {
   "e-warranty": "အွန်လိုင်းအာမခံ",
+  "pending": "အွန်လိုင်းအာမခံ မလုပ်ရသေးပါ",
   "active": "အွန်လိုင်းအာမခံ လုပ်ပြီပြီး",
-  "returned": "အွန်လိုင်းအာမခံ ပြန်သွင်းပြီး"
+  "returned": "အွန်လိုင်းအာမခံ ပြန်သွင်းပြီး",
+  "warranty_activate": "အွန်လိုင်းအာမခံ လုပ်ရန်",
+  "warranty_check": "အွန်လိုင်းအာမခံ စစ်ဆေးရန်",
+  "search": "ရှာဖွေရန်",
+  "loc_number_not_found": "LOC နံပါတ် မတွေ့ပါ!",
+  "warranty_type" : "အွန်လိုင်းအာမခံ အမျိုးအစား",
+  "request_otp": "OTP တောင်းရန်"
 }
