--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,7 +6,7 @@
   "warranty_activate" : "E Warranty Activate",
   "warranty_check" : "E Warranty Check",
   "search": "Search",
-  "loc_number_not_found" : "LOC Number not found!",
+  "loc_number_not_found" : "LOTNumber not found!",
   "warranty_type": "Warranty Type",
   "request_otp" : "Request OTP"
 } 
