--- a/src/locale/my.json
+++ b/src/locale/my.json
@@ -6,7 +6,7 @@
   "warranty_activate": "အွန်လိုင်းအာမခံ လုပ်ရန်",
   "warranty_check": "အွန်လိုင်းအာမခံ စစ်ဆေးရန်",
   "search": "ရှာဖွေရန်",
-  "loc_number_not_found": "LOC နံပါတ် မတွေ့ပါ!",
+  "loc_number_not_found": "LOTနံပါတ် မတွေ့ပါ!",
   "warranty_type" : "အွန်လိုင်းအာမခံ အမျိုးအစား",
   "request_otp": "OTP တောင်းရန်"
 }
