--- a/src/locale/my.json
+++ b/src/locale/my.json
@@ -10,5 +10,17 @@
   "warranty_type" : "အွန်လိုင်းအာမခံ အမျိုးအစား",
   "request_otp": "OTP တောင်းရန်",
   "serial_number_not_found": "LOT နံပါတ် မတွေ့ပါ",
-  "serial_number_is_already_activated": "LOT နံပါတ် သည် အွန်လိုင်းအာမခံ လုပ်ပြီးသား ဖြစ်ပါသည်"
+  "serial_number_is_already_activated": "LOT နံပါတ် သည် အွန်လိုင်းအာမခံ လုပ်ပြီးသား ဖြစ်ပါသည်",
+  "e_warranty_activation_agreement": "အွန်လိုင်းအာမခံ လုပ်ရန် သဘောတူညီချက်",
+  "customer_information": "ဖောက်သည် အချက်အလက်",
+  "product_information": "ထုတ်ကုန် အချက်အလက်",
+  "warranty_information": "အွန်လိုင်းအာမခံ အချက်အလက်",
+  "customer_name": "ဖောက်သည် အမည်",
+  "customer_phone": "ဖောက်သည် ဖုန်းနံပါတ်",
+  "customer_address": "ဖောက်သည် လိပ်စာ",
+  "order_date": "အော်ဒါ ရက်စွဲ",
+  "product": "ထုတ်ကုန်",
+  "lot_number": "LOT နံပါတ်",
+  "category": "အမျိုးအစား",
+  "location": "တည်နေရာ"
 }
