--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -8,6 +8,7 @@
   "search": "Search",
   "lot_number_activated" : "LOT Number is activated!",
   "warranty_type": "Warranty Type",
+  "warranty_period" : "Warranty Period",
   "request_otp" : "Request OTP",
   "serial_number_not_found" : "LOT Number not found",
   "serial_number_is_already_activated" : "LOT Number is already activated",
