--- a/src/locale/my.json
+++ b/src/locale/my.json
@@ -8,6 +8,7 @@
   "search": "ရှာဖွေရန်",
   "lot_number_activated": "LOTနံပါတ် သည်အွန်လိုင်းအာမခံ လုပ်ပြီသားပါ!",
   "warranty_type" : "အွန်လိုင်းအာမခံ အမျိုးအစား",
+  "warranty_period": "အွန်လိုင်းအာမခံ ကာလ",
   "request_otp": "OTP တောင်းရန်",
   "serial_number_not_found": "LOT နံပါတ် မတွေ့ပါ",
   "serial_number_is_already_activated": "LOT နံပါတ် သည် အွန်လိုင်းအာမခံ လုပ်ပြီးသား ဖြစ်ပါသည်",
